# LVGL_Zitai

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  i2c_pca9557.c  i2c_pca9557.h  idf_component.yml  lcd.c  lcd.h  main.c  mylvgl.c  mylvgl.h  mywifi.c  mywifi.h  qmi8658.c  qmi8658.h
