idf_component_register(SRCS "i2c_pca9557.c" 
                           "lcd.c" 
                           "qmi8658.c" 
                           "main.c" 
                           "mylvgl.c" 
                           "mywifi.c" 
                           "../generated/events_init.c" 
                           "../generated/gui_guider.c" 
                           "../generated/setup_scr_screen.c" 
                           "../generated/widgets_init.c"
                           "../generated/guider_fonts/lv_font_montserratMedium_12.c"
                           "../generated/guider_fonts/lv_font_montserratMedium_16.c"
                           "../generated/guider_fonts/lv_font_SourceHanSerifSC_Regular_16.c"
                           "../generated/images/_dat_RGB565A8_38x36.c"
                           "../custom/custom.c"
                       INCLUDE_DIRS "." 
                                   "../generated" 
                                   "../generated/guider_fonts"
                                   "../generated/images"
                                   "../custom"
                                   "..")
